# django-prbac

./: docker-compose.yml
django_prbac/: __init__.py  apps.py  cache.py  mock_settings.py  models.py  signals.py
django_prbac/migrations/: 0001_initial.py  0002_auto_20210930_1858.py  0003_auto_20211004_1133.py  0004_auto_20211004_1139.py
django_prbac_example/: conftest.py  db.sqlite3  manage.py  pyproject.toml
django_prbac_example/django_prbac_example/: asgi.py  settings.py  urls.py  wsgi.py
django_prbac_example/example/: permissions.py
django_prbac_example/example/tests/: test_basic_roles.py
